Improve QModbusDevice connect/open documentation

QModbusDevice::open() & connectDevice() can cover asynchronous and synchronous
connect behavior. This was not very obvious in the documentation. This patch
fixes this uncertainty.

Fixes: QTBUG-71282
Change-Id: I554ea7a8073f9b72027208f5deac4ac3ecc4ccee
Reviewed-by: André Hartmann <aha_1980@gmx.de>